# local_data_store

./: LICENSE  LICENSE.md  README.md  pyproject.toml
local_data_store/: __init__.py  main.py  output.py  variables.py
src/: __init__.py
tests/: big_list.py
